--- a/testing/index.html
+++ b/testing/index.html
@@ -3,5 +3,5 @@
         <span aria-hidden="true">×</span>
         <span class="sr-only">Close</span>
       </button>
-      <strong></strong> <b><font color="red">New Problems</font></b> <a href="/problems/tag/2020-全國賽">2020 全國賽</a>、<a href="/problems/tag/pre-nhspc-2021">2021 全國模擬賽</a>修復完成，<a href="/problems/tag/2022-TOI-pre">2022 TOI 初選</a>、<a href="/problems/tag/nhspc110">2021 全國賽</a>上線囉！ 
+      <strong></strong> <b><font color="red">最新消息</font></b> <a href="https://sggsdatafornehs.github.io/%E5%BF%83%E5%BE%97/index">我們的心得</a>全數上線囉！ 
     </div>
