--- a/upgradeweb/index.html
+++ b/upgradeweb/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>鯨魚記事</title>
-        <link rel="icon" type="image/x-icon" href="https://whaleon120.github.io/blogs/image/albe8-uoedw-001.ico" />
+        <title>科學班內容分享空間</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,7 +18,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">鯨魚日常小記</a>
+                <a class="navbar-brand" href="index.html">科學班內容分享空間</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -40,8 +39,9 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>鯨魚記事</h1>
-                            <span class="subheading">我的blog</span>
+                            <h1>科學班內容分享空間</h1>
+                            <span class="subheading">這是由新竹市曙光女中附設國中部考上111學年度科園實中科學班學生架設的網站</span>
+<span class="subheading">歡迎大家都來參考喔!!!</span>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; 科學班內容分享空間</div>
                     </div>
                 </div>
             </div>
