--- a/upgradeweb/contact.html
+++ b/upgradeweb/contact.html
@@ -25,11 +25,11 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="thoughts.html" style="color:white;">心得</a></li></h6>
-                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html" style="color:white">講解和教學</a></li></h6>
-                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html" style="color:white">資源區</a></li></h6>
-                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html" style="color:white">我們的日常</a></li></h6>
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0"> 
+                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="thoughts.html" style="color:	#BEBEBE;">心得</a></li></h6>
+                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html" style="color:	#BEBEBE">講解和教學</a></li></h6>
+                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="post.html" style="color:	#BEBEBE">資源區</a></li></h6>
+                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html" style="color:	#BEBEBE">我們的日常</a></li></h6>
                     </ul>
                 </div>
             </div>
