--- a/testing/login-system/index.html
+++ b/testing/login-system/index.html
@@ -13,7 +13,7 @@
 <p><label class="label_input">密碼</label><input type="text" id="password" class="text_field"/></p>
 <div id="login_control">
 <input type="button" id="btn_login" value="登入" onclick="login();"/>
-<a id="forget_pwd" href="forget_pwd.html">忘記密碼？</a>
+<a id="forget_pwd" href="forget_pwd.html" style="color:black";>忘記密碼？</a>
 </div>
 </form>
 </div>
