--- a/testing/login-system/index.html
+++ b/testing/login-system/index.html
@@ -9,6 +9,7 @@
 <body>
 <div id="login_frame">
 <form method="post" action="login.js">
+  <h1>資源需要登入才能使用喔</h1>
 <p><label class="label_input">使用者名稱</label><input type="text" id="username" class="text_field"/></p>
 <p><label class="label_input">密碼</label><input type="text" id="password" class="text_field"/></p>
 <div id="login_control">
