--- a/upgradeweb/about.html
+++ b/upgradeweb/about.html
@@ -66,4 +66,5 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
+        <script src="//code.tidio.co/9hmcgrxaiigrdkbcpwrymj5o7slgrvrm.js" async></script>
 </html>
