--- a/upgradeweb/thoughts.html
+++ b/upgradeweb/thoughts.html
@@ -67,5 +67,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="//code.tidio.co/9hmcgrxaiigrdkbcpwrymj5o7slgrvrm.js" async></script>
     </body>
 </html>
