--- a/upgradeweb/contact.html
+++ b/upgradeweb/contact.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>科學班內容分享空間</title>
+        <title>我們的日常</title>
         <!-- Font Awesome icons (free version)-->  
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
