--- a/sssssss.html
+++ b/sssssss.html
@@ -7,9 +7,10 @@
    <br>
     歷屆數學題
   </br>
-  <iframe src="https://drive.google.com/drive/folders/1m0pZcapik9MC5cOkOINMK2nTkTAG3XxL/preview" width="640" height="480" allow="autoplay"></iframe>
+  <a href='https://drive.google.com/drive/folders/1m0pZcapik9MC5cOkOINMK2nTkTAG3XxL?usp=sharing'>點這裡</a>
   <br>手寫詳解</br>
-  <iframe src="https://drive.google.com/drive/folders/189ozstSiu-xXioXeYGOV2ZRwUxmWYDI_/preview" width="640" height="480" allow="autoplay"></iframe>
+https://drive.google.com/drive/folders/1m0pZcapik9MC5cOkOINMK2nTkTAG3XxL?usp=sharing
+<a href='https://drive.google.com/drive/folders/189ozstSiu-xXioXeYGOV2ZRwUxmWYDI_?usp=sharing'>點這裡</a>
   </body> 
    
   </html>
