--- a/upgradeweb/post.html
+++ b/upgradeweb/post.html
@@ -57,7 +57,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
 
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2021</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; 科學班內容分享空間 2022</div>
                     </div>
                 </div>
             </div>
