--- a/testing/login-system/index.html
+++ b/testing/login-system/index.html
@@ -11,7 +11,7 @@
 <form method="post" action="login.js">
   <h1>資源需要登入才能使用喔</h1>
 <p><label class="label_input">使用者名稱</label><input type="text" id="username" class="text_field"/></p>
-<p><label class="label_input">密碼</label><input type="text" id="password" class="text_field"/></p>
+<p><label class="label_input">密碼</label><input type="password" id="password" class="text_field"/></p>
 <div id="login_control">
 <input type="button" id="btn_login" value="登入" onclick="login();"/>
 <a id="forget_pwd" href="forget_pwd.html" style="color:black";>忘記密碼？</a>
