--- a/upgradeweb/contact.html
+++ b/upgradeweb/contact.html
@@ -31,6 +31,8 @@
                        <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://sggsdatafornehs.github.io/testing/login-system/" style="color:#BEBEBE">資源區</a></li></h6>
                         
                         <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html" style="color:	#BEBEBE">我們的日常</a></li></h6>
+                     <h6><li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://sggsdatafornehs.github.io/upgradeweb/alertin.html" style="color:	#BEBEBE">重要公告</a></li></h6>
+
                     </ul>
                 </div>
             </div>
