--- a/testing/latex/test/1.html
+++ b/testing/latex/test/1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 <title>MathJax TeX Test Page</title>
 <script type="text/x-mathjax-config">
@@ -7,4 +9,8 @@
   src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 </head>
-<br>\(2^n\)</br>
+<body>
+When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+</body>
+</html>
